[MODINVOICE-482] Using the new transaction batch endpoint (#468)